# Repo2Neo4j

./: .gitignore  LICENSE  README.md  config.example.yml  docker-compose.yml  pyproject.toml
agents/: code-review.md  mr-analyzer.md  repo-explorer.md
src/repo2neo4j/: __init__.py  cli.py  config.py
src/repo2neo4j/agent/: __init__.py  query_api.py
src/repo2neo4j/graph/: __init__.py  ingester.py  queries.py  schema.py
src/repo2neo4j/models/: __init__.py  code.py  git.py  gitlab.py
src/repo2neo4j/parsers/: __init__.py  code_parser.py  git_parser.py  gitlab_client.py
tests/: conftest.py  test_config.py  test_git_parser.py  test_ingester.py  test_query_api.py
